projetojack-viniciusmatos/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: kube-system
  labels:
    app: nginx
    desafio: jackexperts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        desafio: jackexperts
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: html-volume
          configMap:
            name: nginx-html-configmap
